# voice-agents-hack

./: .gitignore  AGENTS.md  MANUAL_TESTING.md  MASKER_README.md  README.md  tests.txt
.claude/: settings.local.json
.cursor/plans/: cactus_disk_file_resolution_9ec40360.plan.md  disk_layer_orchestrator_integration_2aac001c.plan.md
Ali/: .gitignore  PLAN.md  README.md  main.py  requirements.txt
Ali/config/: index_bootstrap.py  index_progress_hub.py  known_intents.py  preflight.py  resources.py  settings.py
Ali/demo/: wake.py  wake_ui.py
Ali/docs/: cactus-findings.md
Ali/intent/: chat.py  file_resolve.py  meeting_intelligence.py  parser.py  schema.py
Ali/orchestrator/: orchestrator.py  plans.py  router.py  state.py  visual_planner.py
Ali/scripts/: build_index.py  cactus_server.py  debug_local_flow.py  debug_search.py  setup_macos_perms.sh  test_demo_flow.py
Ali/tests/: test_core_contracts.py  test_file_resolve.py  test_script_runtime.py
Ali/ui/: confirmation.py  menu_bar.py  overlay.py  web_overlay.py
Ali/ui-app/: README.md  index.html  package-lock.json  package.json  vite.config.ts
Ali/ui-app/src-tauri/: Cargo.toml  tauri.conf.json
Ali/ui-app/src-tauri/capabilities/: default.json
Ali/voice/: capture.py  deepgram_stream.py  meeting_capture.py  speak.py  transcribe.py  wake_word.py
AryaaBluetoothMesh/ios/: project.yml
CrisisIntake/: AGENTS.md  App.tsx  CLAUDE.md  app.json  package-lock.json  package.json
CrisisIntake/android/: settings.gradle
CrisisIntake/ios/: Podfile
TacNet/: TacNetApp.swift
TacNet.xcodeproj/: project.pbxproj
TacNet/Models/: DataModels.swift
TacNet/Services/: BluetoothMeshService.swift  Cactus.swift
TacNet/Views/: ContentView.swift
TacNetTests/: TacNetTests.swift
aurora/: eas.json  package-lock.json  package.json
docs/wiki/: BACKLOG.md
pitch-deck/: index.html
platform/: README.md
platform/masker-admin/: HANDOFF.md  README.md
platform/masker-core/: README.md
platform/masker-core/crates/masker/: Cargo.toml
platform/masker-core/crates/masker/src/: audio_pipeline.rs  audit_logger.rs  cactus_sdk.rs  client_registry.rs  contracts.rs  crypto.rs  detection.rs  lib.rs  masking.rs  policy.rs  router.rs  trace.rs  voice_loop.rs
platform/masker-core/crates/masker/src/backends/: cactus.rs  mod.rs
platform/masker-core/crates/masker/tests/: integration.rs
platform/masker-library/: README.md  pyproject.toml  requirements.txt
platform/masker-library/masker/: __init__.py  __main__.py  _native.py  contracts.py  gemma_wrapper.py  policy.py  trace.py  voice_loop.py
platform/masker-library/tests/: test_audit_chain.py  test_integration.py
rust/: HANDOFF.md  README.md
(+123 files in other folders)
