[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "masker"
version = "0.1.0"
description = "Privacy middleware SDK for Cactus + Gemma voice agents"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Masker Hack Team" }]
keywords = ["privacy", "voice", "cactus", "gemma", "hipaa"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Security",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.optional-dependencies]
gemini = ["google-genai>=1.0"]

[project.scripts]
masker-demo = "masker.demo:main"

[project.urls]
Repository = "https://github.com/navi25/masker-voice-agents-hack"

[tool.setuptools.packages.find]
include = ["masker*"]
