[package]
name = "masker"
description = "On-device PII/PHI middleware for voice agents — Rust port"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = []
# Enable real Gemini cloud backend (HTTP). Pulls in ureq.
gemini = []
# Enable Cactus integration through the local Rust FFI crate in the sibling
# `../cactus` checkout described in the hackathon setup README.
cactus = ["dep:cactus-sys"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }
once_cell = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
ureq = { workspace = true }
cactus-sys = { path = "../../../../../cactus/rust/cactus-sys", optional = true }
# Crypto — AES-256-GCM for DEK/KEK envelope encryption
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
serde_json = { workspace = true }
